tool/tests/snapshots/dotnet_target__error_handling@MyModuleOpaqueException.cs.snap
---
source: tool/tests/dotnet_target.rs
expression: out_texts.get(out).unwrap()

---
// Automatically generated by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop;

#nullable enable

public partial class MyModuleOpaqueException : Exception
{
    private MyModuleOpaqueError _inner;

    public MyModuleOpaqueException(MyModuleOpaqueError inner) : base("MyModuleOpaque error occurred")
    {
        _inner = inner;
    }

    public MyModuleOpaqueError Inner
    {
        get
        {
            return _inner;
        }
    }
}

