tool/tests/snapshots/dotnet_target__error_handling@MyStruct.cs.snap
---
source: tool/tests/dotnet_target.rs
expression: out_texts.get(out).unwrap()

---
// Automatically generated by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop;

#nullable enable

public partial class MyStruct: IDisposable
{
    private unsafe Raw.MyStruct* _inner;

    /// <summary>
    /// Creates a managed <c>MyStruct</c> from a raw handle.
    /// </summary>
    /// <remarks>
    /// Safety: you should not build two managed objects using the same raw handle (may causes use-after-free and double-free).
    /// </remarks>
    /// <remarks>
    /// This constructor assumes the raw struct is allocated on Rust side.
    /// If implemented, the custom Drop implementation on Rust side WILL run on destruction.
    /// </remarks>
    public unsafe MyStruct(Raw.MyStruct* handle)
    {
        _inner = handle;
    }

    /// <exception cref="MyModuleErrorException"></exception>
    public uint Foo()
    {
        unsafe
        {
            if (_inner == null)
            {
                throw new ObjectDisposedException("MyStruct");
            }
            Raw.FfiResultU32MyModuleError result = Raw.MyStruct.Foo(_inner);
            if (!result.isOk)
            {
                throw new MyModuleErrorException((MyModuleError)result.Err);
            }
            uint retVal = result.Ok;
            return retVal;
        }
    }

    /// <exception cref="MyModuleOpaqueErrorException"></exception>
    public uint Bar()
    {
        unsafe
        {
            if (_inner == null)
            {
                throw new ObjectDisposedException("MyStruct");
            }
            Raw.FfiResultCharMyModuleOpaqueError result = Raw.MyStruct.Bar(_inner);
            if (!result.isOk)
            {
                throw new MyModuleOpaqueErrorException(new MyModuleOpaqueError(result.Err));
            }
            uint retVal = result.Ok;
            return retVal;
        }
    }

    /// <exception cref="DiplomatOpaqueException"></exception>
    public void Baz()
    {
        unsafe
        {
            if (_inner == null)
            {
                throw new ObjectDisposedException("MyStruct");
            }
            Raw.FfiResultVoidVoid result = Raw.MyStruct.Baz(_inner);
            if (!result.isOk)
            {
                throw new DiplomatOpaqueException();
            }
        }
    }

    /// <summary>
    /// Returns the underlying raw handle.
    /// </summary>
    public unsafe Raw.MyStruct* AsFFI()
    {
        return _inner;
    }

    /// <summary>
    /// Destroys the underlying object immediately.
    /// </summary>
    public void Dispose()
    {
        unsafe
        {
            if (_inner == null)
            {
                return;
            }

            Raw.MyStruct.Destroy(_inner);
            _inner = null;

            GC.SuppressFinalize(this);
        }
    }

    ~MyStruct()
    {
        Dispose();
    }
}

