tool/tests/snapshots/dotnet_target__error_handling@RawFfiResultCharMyModuleOpaqueError.cs.snap
---
source: tool/tests/dotnet_target.rs
expression: out_texts.get(out).unwrap()

---
// Automatically generated by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop.Raw;

#nullable enable

[StructLayout(LayoutKind.Sequential)]
public partial struct FfiResultCharMyModuleOpaqueError
{
    [StructLayout(LayoutKind.Explicit)]
    private unsafe struct InnerUnion
    {
        [FieldOffset(0)]
        internal uint ok;
        [FieldOffset(0)]
        internal MyModuleOpaqueError err;
    }

    private InnerUnion _inner;

    [MarshalAs(UnmanagedType.U1)]
    public bool isOk;

    public unsafe uint Ok
    {
        get
        {
            return _inner.ok;
        }
    }

    public unsafe MyModuleOpaqueError Err
    {
        get
        {
            return _inner.err;
        }
    }
}

