tool/tests/snapshots/dotnet_target__error_handling@RawMyModuleOpaqueError.cs.snap
---
source: tool/tests/dotnet_target.rs
expression: out_texts.get(out).unwrap()
---
// <auto-generated/> by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop.Raw;

#nullable enable

[StructLayout(LayoutKind.Sequential)]
public partial struct MyModuleOpaqueError
{
    private const string NativeLib = "rust";

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "MyModuleOpaqueError_destroy", ExactSpelling = true)]
    public static unsafe extern void Destroy(MyModuleOpaqueError* self);
}

