tool/tests/snapshots/dotnet_target__error_handling@RawMyStruct.cs.snap
---
source: tool/tests/dotnet_target.rs
expression: out_texts.get(out).unwrap()
---
// <auto-generated/> by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop.Raw;

#nullable enable

[StructLayout(LayoutKind.Sequential)]
public partial struct MyStruct
{
    private const string NativeLib = "rust";

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "MyStruct_foo", ExactSpelling = true)]
    public static unsafe extern FfiResultU32MyModuleError Foo(MyStruct* self);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "MyStruct_bar", ExactSpelling = true)]
    public static unsafe extern FfiResultCharMyModuleOpaqueError Bar(MyStruct* self);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "MyStruct_baz", ExactSpelling = true)]
    public static unsafe extern FfiResultVoidVoid Baz(MyStruct* self);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "MyStruct_destroy", ExactSpelling = true)]
    public static unsafe extern void Destroy(MyStruct* self);
}

