tool/tests/snapshots/dotnet_target__generation_using_default_config@MyLibErrorException.cs.snap
---
source: tool/tests/dotnet_target.rs
expression: out_texts.get(out).unwrap()

---
// Automatically generated by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop;

#nullable enable

public partial class MyLibErrorException : Exception
{
    private MyLibError _inner;

    public MyLibErrorException(MyLibError inner) : base("MyLibError error occurred")
    {
        _inner = inner;
    }

    public MyLibError Inner
    {
        get
        {
            return _inner;
        }
    }
}

